Added postgis to the docker-compose

--- a/docker/compose-home/.config/QGIS/QGIS2.conf
+++ b/docker/compose-home/.config/QGIS/QGIS2.conf
@@ -42,6 +42,22 @@ PluginManager\secondSplitterState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0\x
 PluginManager\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x2Q\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x2Q\0\0\0\0\0\0)
 PluginManager\splitState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0\x8c\0\0\x1\xd3\0\0\0\0\a\x1\0\0\0\x1)
 PluginManager\tab=0
+OpenVectorLayer\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3\xb1\0\0\x1V\0\0\x5\xa2\0\0\x2I\0\0\x3\xb5\0\0\x1s\0\0\x5\x9e\0\0\x2\x45\0\0\0\0\0\0)
+NewMemoryLayer\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3\xc8\0\0\x1-\0\0\x5\x8b\0\0\x2r\0\0\x3\xcc\0\0\x1J\0\0\x5\x87\0\0\x2n\0\0\0\0\0\0)
+ProjectionSelector\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x2\\\0\0\x2\x32\0\0\0\0\0\0\0\0\0\0\x2\\\0\0\x2\x32\0\0\0\0\0\0)
+PgSourceSelect\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3#\0\0\0\xd1\0\0\x6/\0\0\x2\xcd\0\0\x3'\0\0\0\xee\0\0\x6+\0\0\x2\xc9\0\0\0\0\0\0)
+PgSourceSelect\HoldDialogOpen=false
+PgSourceSelect\columnWidths\0=100
+PgSourceSelect\columnWidths\1=100
+PgSourceSelect\columnWidths\2=100
+PgSourceSelect\columnWidths\3=100
+PgSourceSelect\columnWidths\4=100
+PgSourceSelect\columnWidths\5=100
+PgSourceSelect\columnWidths\6=100
+PgSourceSelect\columnWidths\7=100
+PgSourceSelect\columnWidths\8=100
+PgSourceSelect\columnWidths\9=100
+VectorLayerSaveAs\geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3~\0\0\0\x83\0\0\x5\xd4\0\0\x3\x1b\0\0\x3\x82\0\0\0\xa0\0\0\x5\xd0\0\0\x3\x17\0\0\0\0\0\0)
 
 [UI]
 state="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x3\0\0\0\0\0\0\x1&\0\0\x2\x42\xfc\x2\0\0\0\f\xfc\0\0\0W\0\0\x1\x8f\0\0\0q\0\xff\xff\xff\xfa\0\0\0\x2\x1\0\0\0\x3\xfb\0\0\0\f\0L\0\x65\0g\0\x65\0n\0\x64\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\xfb\0\0\0\x14\0L\0\x61\0y\0\x65\0r\0O\0r\0\x64\0\x65\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xa6\0\xff\xff\xff\xfb\0\0\0\xe\0\x42\0r\0o\0w\0s\0\x65\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\x46\0\xff\xff\xff\xfb\0\0\0\x10\0O\0v\0\x65\0r\0v\0i\0\x65\0w\0\0\0\x1\xd7\0\0\0\xc4\0\0\0\x14\0\xff\xff\xff\xfb\0\0\0\"\0\x43\0o\0o\0r\0\x64\0i\0n\0\x61\0t\0\x65\0\x43\0\x61\0p\0t\0u\0r\0\x65\0\0\0\x1~\0\0\0\xa0\0\0\0\0\0\0\0\0\xfb\0\0\0\b\0U\0n\0\x64\0o\0\0\0\x1\xe4\0\0\0\xdc\0\0\0\0\0\0\0\0\xfb\0\0\0\x10\0\x42\0r\0o\0w\0s\0\x65\0r\0\x32\0\0\0\x2\x13\0\0\0\xad\0\0\0,\0\xff\xff\xff\xfb\0\0\0\x1c\0G\0P\0S\0I\0n\0\x66\0o\0r\0m\0\x61\0t\0i\0o\0n\0\0\0\x1\xbb\0\0\x1\x5\0\0\0\xa7\0\xff\xff\xff\xfb\0\0\0(\0\x64\0w\0O\0p\0\x65\0n\0l\0\x61\0y\0\x65\0r\0s\0O\0v\0\x65\0r\0v\0i\0\x65\0w\0\0\0\x1\x64\0\0\x1\x37\0\0\0\0\0\0\0\0\xfb\0\0\0\x1c\0u\0n\0\x64\0o\0/\0r\0\x65\0\x64\0o\0 \0\x64\0o\0\x63\0k\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xf0\0\xff\xff\xff\xfb\0\0\0.\0\x41\0\x64\0v\0\x61\0n\0\x63\0\x65\0\x64\0\x44\0i\0g\0i\0t\0i\0z\0i\0n\0g\0T\0o\0o\0l\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\0\xbf\0\0\0\xdc\xfb\0\0\0\x34\0S\0t\0\x61\0t\0i\0s\0t\0\x61\0l\0S\0u\0m\0m\0\x61\0r\0y\0\x44\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x9a\0\xff\xff\xff\xfb\0\0\0&\0\x42\0o\0o\0k\0m\0\x61\0r\0k\0s\0\x44\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0\0\0\0\0\xff\xff\xff\xff\0\0\0q\0\xff\xff\xff\xfb\0\0\0\f\0L\0\x61\0y\0\x65\0r\0s\x1\0\0\x1\xec\0\0\0\xad\0\0\0q\0\xff\xff\xff\0\0\0\x1\0\0\x1\0\0\0\x2\x34\xfc\x2\0\0\0\x4\xfb\0\0\0\x1e\0S\0\x65\0x\0t\0\x61\0n\0t\0\x65\0T\0o\0o\0l\0\x62\0o\0x\0\0\0\0g\0\0\x2\x34\0\0\0\0\0\0\0\0\xfb\0\0\0\x14\0M\0\x61\0p\0S\0t\0y\0l\0i\0n\0g\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x8b\0\xff\xff\xff\xfb\0\0\0\"\0P\0r\0o\0\x63\0\x65\0s\0s\0i\0n\0g\0T\0o\0o\0l\0\x62\0o\0x\0\0\0\0\0\xff\xff\xff\xff\0\0\0z\0\xff\xff\xff\xfb\0\0\0 \0t\0h\0\x65\0T\0i\0l\0\x65\0S\0\x63\0\x61\0l\0\x65\0\x44\0o\0\x63\0k\0\0\0\0\0\xff\xff\xff\xff\0\0\0z\0\xff\xff\xff\0\0\0\x3\0\0\x3z\0\0\0\x91\xfc\x1\0\0\0\x2\xfb\0\0\0\x14\0M\0\x65\0s\0s\0\x61\0g\0\x65\0L\0o\0g\0\0\0\x1.\0\0\x3z\0\0\0}\0\xff\xff\xff\xfb\0\0\0&\0U\0s\0\x65\0r\0I\0n\0p\0u\0t\0\x44\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\x2\0\0\0\0\0\0\0\0\0\0\0\xc8\0\0\0\x64\0\0\x3M\0\0\x2\x42\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x2\xfc\0\0\0\f\0\0\0\0\0\0\0\x2\0\0\0\x1a\0m\0L\0\x61\0y\0\x65\0r\0T\0o\0o\0l\0\x42\0\x61\0r\x3\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0m\0V\0\x65\0\x63\0t\0o\0r\0T\0o\0o\0l\0\x42\0\x61\0r\x3\0\0\x1:\0\0\0\xb0\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\x4\0\0\0\x18\0m\0\x46\0i\0l\0\x65\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0m\0M\0\x61\0p\0N\0\x61\0v\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\xc8\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0$\0m\0\x41\0t\0t\0r\0i\0\x62\0u\0t\0\x65\0s\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x2+\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x18\0m\0H\0\x65\0l\0p\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x4\b\0\0\x5\xcc\0\0\0\0\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\x5\0\0\0 \0m\0\x44\0i\0g\0i\0t\0i\0z\0\x65\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1a\0m\0L\0\x61\0\x62\0\x65\0l\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x1o\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0 \0m\0\x44\0\x61\0t\0\x61\0\x62\0\x61\0s\0\x65\0T\0o\0o\0l\0\x42\0\x61\0r\0\0\0\x2o\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x16\0m\0W\0\x65\0\x62\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x2u\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0m\0P\0l\0u\0g\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x2\xa2\0\0\x2\x17\0\0\0\0\0\0\0\0\0\0\0\x2\0\0\0\x2\0\0\0\x30\0m\0\x41\0\x64\0v\0\x61\0n\0\x63\0\x65\0\x64\0\x44\0i\0g\0i\0t\0i\0z\0\x65\0T\0o\0o\0l\0\x42\0\x61\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0m\0R\0\x61\0s\0t\0\x65\0r\0T\0o\0o\0l\0\x42\0\x61\0r\0\0\0\0\0\0\0\x2\xb0\0\0\0\0\0\0\0\0)"
@@ -50,6 +66,8 @@ recentProjects\1\title=/home/pvalsecchi/test.qgs
 recentProjects\1\path=/home/pvalsecchi/test.qgs
 recentProjects\1\previewImage=/home/pvalsecchi/.qgis2///previewImages/18abc3ec21730e8ba3638059810a8071.png
 recentProjects\1\crs=EPSG:4326
+defaultNewLayer=2
+defaultAddDbLayerAction=0
 
 [QgsCollapsibleGroupBox]
 QgsMeasureBase\groupBox\collapsed=true
@@ -57,6 +75,12 @@ QgsPluginManagerBase\ckbExperimental\checked=false
 QgsPluginManagerBase\ckbExperimental\collapsed=false
 QgsPluginManagerBase\ckbDeprecated\checked=false
 QgsPluginManagerBase\ckbDeprecated\collapsed=false
+QgsVectorLayerSaveAsDialogBase\mAttributesSelection\collapsed=true
+QgsVectorLayerSaveAsDialogBase\mGeometryGroupBox\collapsed=false
+QgsVectorLayerSaveAsDialogBase\mExtentGroupBox\collapsed=true
+QgsVectorLayerSaveAsDialogBase\mDatasourceOptionsGroupBox\collapsed=false
+QgsVectorLayerSaveAsDialogBase\mLayerOptionsGroupBox\collapsed=false
+QgsVectorLayerSaveAsDialogBase\mOgrOptionsGroupBox\collapsed=true
 
 [gps]
 lastPort=
@@ -74,10 +98,28 @@ gpsdDevice=
 panMode=recenterWhenNeeded
 
 [browser]
-expandedPaths=favourites:, wms:/server
+expandedPaths=favourites:, pg:/db/public, wms:/server
 propertiesWidgetEnabled=false
 propertiesWidgetHeight=@Variant(\0\0\0\x87\0\0\0\0)
 
 [browser2]
 propertiesWidgetEnabled=false
 propertiesWidgetHeight=@Variant(\0\0\0\x87\0\0\0\0)
+
+[PostgreSQL]
+connections\selected=db
+connections\db\service=
+connections\db\host=db
+connections\db\port=5432
+connections\db\database=qgis
+connections\db\username=qgis
+connections\db\password=qgis
+connections\db\authcfg=
+connections\db\publicOnly=false
+connections\db\geometryColumnsOnly=false
+connections\db\dontResolveType=false
+connections\db\allowGeometrylessTables=false
+connections\db\sslmode=1
+connections\db\saveUsername=true
+connections\db\savePassword=true
+connections\db\estimatedMetadata=false
