--- a/docker/compose-home/.config/Trolltech.conf
+++ b/docker/compose-home/.config/Trolltech.conf
@@ -17,6 +17,10 @@ usr\lib\x86_64-linux-gnu\qt4\plugins\sqldrivers\libqsqlite.so=40807, 0, x86_64 l
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:32
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:31
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:31
+usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqcncodecs.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:13
+usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqjpcodecs.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:13
+usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqkrcodecs.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:13
+usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqtwcodecs.so=40807, 0, x86_64 linux g++-4 full-config, 2016-04-05T14:53:13
 
 [Qt%20Factory%20Cache%204.8]
 com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2016-04-05T14:53:28, imsw-multi
@@ -33,6 +37,10 @@ com.trolltech.Qt.QSqlDriverFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plug
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=2016-04-05T14:53:32, connman
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=2016-04-05T14:53:31, generic
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=2016-04-05T14:53:31, networkmanager
+com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqcncodecs.so=2016-04-05T14:53:13, GB18030, GBK, GB2312, gb2312.1980-0, gbk-0, CP936, MS936, windows-936, MIB: 114, MIB: 113, MIB: 2025, MIB: 57, MIB: -113
+com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqjpcodecs.so=2016-04-05T14:53:13, EUC-JP, ISO-2022-JP, Shift_JIS, jisx0201*-0, jisx0208*-0, JIS7, SJIS, MS_Kanji, MIB: 18, MIB: 39, MIB: 17, MIB: 15, MIB: 63
+com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqkrcodecs.so=2016-04-05T14:53:13, EUC-KR, ksc5601.1987-0, cp949, MIB: 38, MIB: 36, MIB: -949
+com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\codecs\libqtwcodecs.so=2016-04-05T14:53:13, Big5, Big5-HKSCS, big5-0, big5hkscs-0, Big5-ETen, CP950, MIB: 2026, MIB: 2101, MIB: -2026, MIB: -2101
 
 [Qt]
 filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0\\\0\0\xe\0\x1\0\0\0\x4\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\x17\x66ile:///home/pvalsecchi\0\0\0\x1\0\0\0 \0/\0h\0o\0m\0\x65\0/\0p\0v\0\x61\0l\0s\0\x65\0\x63\0\x63\0h\0i\0\0\0 \0/\0h\0o\0m\0\x65\0/\0p\0v\0\x61\0l\0s\0\x65\0\x63\0\x63\0h\0i\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x1)
