--- a/tests/src/gui/CMakeLists.txt
+++ b/tests/src/gui/CMakeLists.txt
@@ -141,4 +141,5 @@ ADD_QGIS_TEST(scalecombobox testqgsscalecombobox.cpp)
 ADD_QGIS_TEST(spinbox testqgsspinbox.cpp)
 ADD_QGIS_TEST(sqlcomposerdialog testqgssqlcomposerdialog.cpp)
 ADD_QGIS_TEST(editorwidgetregistrytest testqgseditorwidgetregistry.cpp)
+ADD_QGIS_TEST(keyvaluewidgettest testqgskeyvaluewidget.cpp)
 
