--- a/tests/src/core/CMakeLists.txt
+++ b/tests/src/core/CMakeLists.txt
@@ -142,6 +142,7 @@ ADD_QGIS_TEST(graduatedsymbolrenderertest testqgsgraduatedsymbolrenderer.cpp)
 ADD_QGIS_TEST(histogramtest testqgshistogram.cpp)
 ADD_QGIS_TEST(imageoperationtest testqgsimageoperation.cpp)
 ADD_QGIS_TEST(invertedpolygontest testqgsinvertedpolygonrenderer.cpp )
+ADD_QGIS_TEST(jsonutilstest testqgsjsonutils.cpp )
 ADD_QGIS_TEST(labelingengine testqgslabelingengine.cpp)
 ADD_QGIS_TEST(layertree testqgslayertree.cpp)
 ADD_QGIS_TEST(legendrenderertest testqgslegendrenderer.cpp )
